Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...895030c](https://github.com/cri-o/cri-o/compare/v1.23.0...895030c4164f4fff74f12d7aa22f9230f58a2653) on Mon, 09 May 2022 20:44:12 UTC.
+[v1.23.0...0ba47c9](https://github.com/cri-o/cri-o/compare/v1.23.0...0ba47c9b3e52eee95d898be84500c38c9fe032c9) on Tue, 10 May 2022 00:27:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz)
-- [cri-o.amd64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz.sha256sum)
-- [cri-o.arm64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz)
-- [cri-o.arm64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.895030c4164f4fff74f12d7aa22f9230f58a2653.tar.gz.sha256sum)
+- [cri-o.amd64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz)
+- [cri-o.amd64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz.sha256sum)
+- [cri-o.arm64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz)
+- [cri-o.arm64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0ba47c9b3e52eee95d898be84500c38c9fe032c9.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -64,6 +64,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Updated CNI plugins to v1.1.1. ([#5766](https://github.com/cri-o/cri-o/pull/5766), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
+ - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
  - Conmon now always writes its logs to syslog, instead of only when the cgroup manager is cgroupfs ([#3773](https://github.com/cri-o/cri-o/pull/3773), [@haircommander](https://github.com/haircommander))
  - Crio no longer requires the conntrack binary ([#5811](https://github.com/cri-o/cri-o/pull/5811), [@aojea](https://github.com/aojea))
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
