--- a/v1.22.3.md
+++ b/v1.22.3.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.3
 
 The release notes have been generated for the commit range
-[v1.22.2...388405c](https://github.com/cri-o/cri-o/compare/v1.22.2...388405c4413c3322fadb53b15f163c0fc531c73b) on Wed, 04 May 2022 18:32:03 UTC.
+[v1.22.2...1cc1233](https://github.com/cri-o/cri-o/compare/v1.22.2...1cc1233f9d131336f021f1258078a0fe5f2259b1) on Tue, 10 May 2022 15:21:26 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz)
-- [cri-o.arm64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.388405c4413c3322fadb53b15f163c0fc531c73b.tar.gz)
+- [cri-o.amd64.1cc1233f9d131336f021f1258078a0fe5f2259b1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1cc1233f9d131336f021f1258078a0fe5f2259b1.tar.gz)
+- [cri-o.arm64.1cc1233f9d131336f021f1258078a0fe5f2259b1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1cc1233f9d131336f021f1258078a0fe5f2259b1.tar.gz)
 
 ## Changelog since v1.22.2
 
@@ -37,7 +37,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-_Nothing has changed._
+- github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
+- github.com/modern-go/reflect2: [v1.0.1 → v1.0.2](https://github.com/modern-go/reflect2/compare/v1.0.1...v1.0.2)
 
 ### Removed
 _Nothing has changed._
