--- a/v1.21.6.md
+++ b/v1.21.6.md
@@ -11,20 +11,21 @@
 # CRI-O v1.21.6
 
 The release notes have been generated for the commit range
-[v1.21.5...52bce89](https://github.com/cri-o/cri-o/compare/v1.21.5...52bce89eefa9d5d8472fc526746ee580c62c7a64) on Tue, 10 May 2022 16:22:51 UTC.
+[v1.21.5...173d83e](https://github.com/cri-o/cri-o/compare/v1.21.5...173d83eb375fa7c711bce608f7cd1b26eadf29a7) on Wed, 11 May 2022 16:53:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.52bce89eefa9d5d8472fc526746ee580c62c7a64.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.52bce89eefa9d5d8472fc526746ee580c62c7a64.tar.gz)
-- [cri-o.arm64.52bce89eefa9d5d8472fc526746ee580c62c7a64.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.52bce89eefa9d5d8472fc526746ee580c62c7a64.tar.gz)
+- [cri-o.amd64.173d83eb375fa7c711bce608f7cd1b26eadf29a7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.173d83eb375fa7c711bce608f7cd1b26eadf29a7.tar.gz)
+- [cri-o.arm64.173d83eb375fa7c711bce608f7cd1b26eadf29a7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.173d83eb375fa7c711bce608f7cd1b26eadf29a7.tar.gz)
 
 ## Changelog since v1.21.5
 
 ### Changes by Kind
 
 #### Uncategorized
+ - Fix a segfault when multiple container stops come in for the same container ([#5828](https://github.com/cri-o/cri-o/pull/5828), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5478](https://github.com/cri-o/cri-o/pull/5478), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
