--- a/v1.21.6.md
+++ b/v1.21.6.md
@@ -11,14 +11,14 @@
 # CRI-O v1.21.6
 
 The release notes have been generated for the commit range
-[v1.21.5...014ce61](https://github.com/cri-o/cri-o/compare/v1.21.5...014ce61f88e92951d4239c2f6ede82488621c921) on Thu, 12 May 2022 09:36:06 UTC.
+[v1.21.5...8faeccb](https://github.com/cri-o/cri-o/compare/v1.21.5...8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c) on Thu, 12 May 2022 21:00:20 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.014ce61f88e92951d4239c2f6ede82488621c921.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.014ce61f88e92951d4239c2f6ede82488621c921.tar.gz)
-- [cri-o.arm64.014ce61f88e92951d4239c2f6ede82488621c921.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.014ce61f88e92951d4239c2f6ede82488621c921.tar.gz)
+- [cri-o.amd64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz)
+- [cri-o.arm64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz)
 
 ## Changelog since v1.21.5
 
@@ -35,7 +35,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-_Nothing has changed._
+- github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
+- github.com/modern-go/reflect2: [v1.0.1 → v1.0.2](https://github.com/modern-go/reflect2/compare/v1.0.1...v1.0.2)
 
 ### Removed
 _Nothing has changed._
