--- a/v1.20.7.md
+++ b/v1.20.7.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.7
 
 The release notes have been generated for the commit range
-[v1.20.6...9d43307](https://github.com/cri-o/cri-o/compare/v1.20.6...9d43307ff1396a785966805825f836893e72890d) on Fri, 13 May 2022 19:44:52 UTC.
+[v1.20.6...b9df556](https://github.com/cri-o/cri-o/compare/v1.20.6...b9df556cfcc56c1a3b3214bc6e06ef1cffeddaa7) on Mon, 16 May 2022 09:06:14 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.9d43307ff1396a785966805825f836893e72890d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.9d43307ff1396a785966805825f836893e72890d.tar.gz)
-- [cri-o.arm64.9d43307ff1396a785966805825f836893e72890d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.9d43307ff1396a785966805825f836893e72890d.tar.gz)
+- [cri-o.amd64.b9df556cfcc56c1a3b3214bc6e06ef1cffeddaa7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.b9df556cfcc56c1a3b3214bc6e06ef1cffeddaa7.tar.gz)
+- [cri-o.arm64.b9df556cfcc56c1a3b3214bc6e06ef1cffeddaa7.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.b9df556cfcc56c1a3b3214bc6e06ef1cffeddaa7.tar.gz)
 
 ## Changelog since v1.20.6
 
@@ -41,7 +41,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
-_Nothing has changed._
+- github.com/json-iterator/go: [v1.1.10 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.10...v1.1.12)
+- github.com/modern-go/reflect2: [v1.0.1 → v1.0.2](https://github.com/modern-go/reflect2/compare/v1.0.1...v1.0.2)
 
 ### Removed
 _Nothing has changed._
