Update release notes

--- a/v1.21.6.md
+++ b/v1.21.6.md
@@ -11,14 +11,14 @@
 # CRI-O v1.21.6
 
 The release notes have been generated for the commit range
-[v1.21.5...8faeccb](https://github.com/cri-o/cri-o/compare/v1.21.5...8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c) on Thu, 12 May 2022 21:00:20 UTC.
+[v1.21.5...d3132c4](https://github.com/cri-o/cri-o/compare/v1.21.5...d3132c48b8f2832db77738fade8b3bca23e58693) on Mon, 16 May 2022 14:48:08 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz)
-- [cri-o.arm64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8faeccbf1cdef80635b4c75a2e2d65e8b4d4146c.tar.gz)
+- [cri-o.amd64.d3132c48b8f2832db77738fade8b3bca23e58693.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.d3132c48b8f2832db77738fade8b3bca23e58693.tar.gz)
+- [cri-o.arm64.d3132c48b8f2832db77738fade8b3bca23e58693.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.d3132c48b8f2832db77738fade8b3bca23e58693.tar.gz)
 
 ## Changelog since v1.21.5
 
@@ -27,6 +27,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Uncategorized
  - Allow CRI-O to parse > SIGRTMIN signals ([#5861](https://github.com/cri-o/cri-o/pull/5861), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5828](https://github.com/cri-o/cri-o/pull/5828), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5873](https://github.com/cri-o/cri-o/pull/5873), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5478](https://github.com/cri-o/cri-o/pull/5478), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
