--- a/v1.22.4.md
+++ b/v1.22.4.md
@@ -15,7 +15,7 @@
 # CRI-O v1.22.4
 
 The release notes have been generated for the commit range
-[v1.22.3...e060681](https://github.com/cri-o/cri-o/compare/v1.22.3...e06068142f46a70b30a4b1af3846dc05801e4295) on Tue, 17 May 2022 15:39:00 UTC.
+[v1.22.3...e060681](https://github.com/cri-o/cri-o/compare/v1.22.3...e06068142f46a70b30a4b1af3846dc05801e4295) on Tue, 17 May 2022 12:58:27 EDT.
 
 ## Downloads
 
