Update release notes

--- a/v1.22.4.md
+++ b/v1.22.4.md
@@ -2,9 +2,6 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.3](#changelog-since-v1223)
     - [Changes by Kind](#changes-by-kind)
-      - [Deprecation](#deprecation)
-      - [API Change](#api-change)
-      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
       - [Uncategorized](#uncategorized)
   - [Dependencies](#dependencies)
@@ -15,7 +12,7 @@
 # CRI-O v1.22.4
 
 The release notes have been generated for the commit range
-[v1.22.3...e060681](https://github.com/cri-o/cri-o/compare/v1.22.3...e06068142f46a70b30a4b1af3846dc05801e4295) on Tue, 17 May 2022 12:58:27 EDT.
+[v1.22.3...e060681](https://github.com/cri-o/cri-o/compare/v1.22.3...e06068142f46a70b30a4b1af3846dc05801e4295) on Tue, 17 May 2022 13:06:40 EDT.
 
 ## Downloads
 
@@ -28,39 +25,11 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 ### Changes by Kind
 
-#### Deprecation
- - Deprecate `conmon`, `conmon-cgroup`, and `conmon-env` config options in favor of runtime handler specific fields `monitor-path`, `monitor-cgroup`, and `monitor-env` ([#5823](https://github.com/cri-o/cri-o/pull/5823), [@haircommander](https://github.com/haircommander))
- - Mark --pids-limit and --log-size-max options as deprecated, as well as set the default pids-limit to unlimited. Users should migrate to using the Kubelet's flags --pod-pids-limit and --container-log-max-size respectively. ([#5831](https://github.com/cri-o/cri-o/pull/5831), [@haircommander](https://github.com/haircommander))
-
-#### API Change
- - Block containers without CAP_SYS_ADMIN on `unshare` syscall in the default seccomp profile, to better contain unprivileged container processes. ([#5788](https://github.com/cri-o/cri-o/pull/5788), [@haircommander](https://github.com/haircommander))
- - Enable `--seccomp-use-default-when-empty`/`seccomp_use_default_when_empty` by default.
-  This is a premature step before the graduation of the `seccompDefault` feature planned for
-  Kubernetes v1.25. We now use the `runtime/default` profile for every workload specifying 
-  none (empty) in the pod manifest. ([#5587](https://github.com/cri-o/cri-o/pull/5587), [@saschagrunert](https://github.com/saschagrunert))
-
-#### Feature
- - Add experimental support for conmonrs, a redesign of conmon in rust. It should not be used in production. ([#5839](https://github.com/cri-o/cri-o/pull/5839), [@haircommander](https://github.com/haircommander))
- - Add pause and unpause to the CRI-O HTTP API, allowing programs with access to the crio.sock to pause containers ([#5797](https://github.com/cri-o/cri-o/pull/5797), [@jwcesign](https://github.com/jwcesign))
- - Added more verbose output to version information.
-  Added new `crio version -v,--verbose` flag to additionally list all compiled dependencies. ([#5750](https://github.com/cri-o/cri-o/pull/5750), [@saschagrunert](https://github.com/saschagrunert))
- - Updated CNI plugins to v1.1.1. ([#5766](https://github.com/cri-o/cri-o/pull/5766), [@saschagrunert](https://github.com/saschagrunert))
-
 #### Bug or Regression
- - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
- - Crio no longer requires the conntrack binary ([#5811](https://github.com/cri-o/cri-o/pull/5811), [@aojea](https://github.com/aojea))
- - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
- - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5800](https://github.com/cri-o/cri-o/pull/5800), [@haircommander](https://github.com/haircommander))
- - Fix a segfault when multiple container stops come in for the same container ([#5756](https://github.com/cri-o/cri-o/pull/5756), [@haircommander](https://github.com/haircommander))
- - Fix filesystem stats on zfs driver. ([#5821](https://github.com/cri-o/cri-o/pull/5821), [@cnfatal](https://github.com/cnfatal))
- - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5775](https://github.com/cri-o/cri-o/pull/5775), [@manuelluis](https://github.com/manuelluis))
- - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5783](https://github.com/cri-o/cri-o/pull/5783), [@haircommander](https://github.com/haircommander))
- - Libcni: handle empty version when parsing version (https://github.com/containernetworking/cni/pull/893). Without this, Delete failed for empty-version configs, which was a regression from v0.8.0. ([#5830](https://github.com/cri-o/cri-o/pull/5830), [@aojea](https://github.com/aojea))
+ - Fix a segfault when multiple container stops come in for the same container ([#5803](https://github.com/cri-o/cri-o/pull/5803), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
- - Disable systemd-mode cgroup detection if /sys/fs/cgroup is bind mounted from the host ([#5778](https://github.com/cri-o/cri-o/pull/5778), [@harche](https://github.com/harche))
- - Fix 386 builds within CI ([#5813](https://github.com/cri-o/cri-o/pull/5813), [@rphillips](https://github.com/rphillips))
- - Updated default pause image to point to new location `registry.k8s.io/pause:3.6` ([#5777](https://github.com/cri-o/cri-o/pull/5777), [@ameukam](https://github.com/ameukam))
+ - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5829](https://github.com/cri-o/cri-o/pull/5829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
