--- a/v1.21.7.md
+++ b/v1.21.7.md
@@ -11,7 +11,7 @@
 # CRI-O v1.21.7
 
 The release notes have been generated for the commit range
-[v1.21.6...283ec41](https://github.com/cri-o/cri-o/compare/v1.21.6...283ec410c082bf91304bbf6f5d5bf1c6490a0e3d) on Tue, 17 May 2022 09:17:39 UTC.
+[v1.21.6...283ec41](https://github.com/cri-o/cri-o/compare/v1.21.6...283ec410c082bf91304bbf6f5d5bf1c6490a0e3d) on Tue, 17 May 2022 13:07:29 EDT.
 
 ## Downloads
 
