Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...ccef160](https://github.com/cri-o/cri-o/compare/v1.23.0...ccef1604bb8adb74adda401c06cf8750c869515f) on Tue, 17 May 2022 15:17:41 UTC.
+[v1.23.0...355269e](https://github.com/cri-o/cri-o/compare/v1.23.0...355269e34a2f9e5f9d48e60e397b120c828fda2e) on Tue, 17 May 2022 17:24:49 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz)
-- [cri-o.amd64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz.sha256sum)
-- [cri-o.arm64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz)
-- [cri-o.arm64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ccef1604bb8adb74adda401c06cf8750c869515f.tar.gz.sha256sum)
+- [cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz)
+- [cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum)
+- [cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz)
+- [cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -56,6 +56,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add experimental support for conmonrs, a redesign of conmon in rust. It should not be used in production. ([#5839](https://github.com/cri-o/cri-o/pull/5839), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add pause and unpause to the CRI-O HTTP API, allowing programs with access to the crio.sock to pause containers ([#5797](https://github.com/cri-o/cri-o/pull/5797), [@jwcesign](https://github.com/jwcesign))
+ - Added more verbose output to version information.
+  Added new `crio version -v,--verbose` flag to additionally list all compiled dependencies. ([#5750](https://github.com/cri-o/cri-o/pull/5750), [@saschagrunert](https://github.com/saschagrunert))
  - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
  - Implement CDI device injection: extract the names of requested CDI devices and update
   the OCI Spec according to the corresponding CDI device specifications. Please refer to
