--- a/v1.23.2.md
+++ b/v1.23.2.md
@@ -11,16 +11,16 @@
 # CRI-O v1.23.2
 
 The release notes have been generated for the commit range
-[v1.23.1...f5a1c11](https://github.com/cri-o/cri-o/compare/v1.23.1...f5a1c11662640efe7ed46385865598b1b115c245) on Fri, 06 May 2022 08:11:33 UTC.
+[v1.23.1...41c0779](https://github.com/cri-o/cri-o/compare/v1.23.1...41c0779f7d4e460f58b7795618b7036e72021e03) on Tue, 17 May 2022 18:12:32 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz)
-- [cri-o.amd64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz.sha256sum)
-- [cri-o.arm64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz)
-- [cri-o.arm64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f5a1c11662640efe7ed46385865598b1b115c245.tar.gz.sha256sum)
+- [cri-o.amd64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz)
+- [cri-o.amd64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz.sha256sum)
+- [cri-o.arm64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz)
+- [cri-o.arm64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.41c0779f7d4e460f58b7795618b7036e72021e03.tar.gz.sha256sum)
 
 ## Changelog since v1.23.1
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a segfault when multiple container stops come in for the same container ([#5782](https://github.com/cri-o/cri-o/pull/5782), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix vm containers couldn't restore after cri-o restart ([#5633](https://github.com/cri-o/cri-o/pull/5633), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5792](https://github.com/cri-o/cri-o/pull/5792), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Internal pod and container creation timeouts now account for changes in `runtime-request-timeout` in the Kubelet ([#5853](https://github.com/cri-o/cri-o/pull/5853), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
