Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...355269e](https://github.com/cri-o/cri-o/compare/v1.23.0...355269e34a2f9e5f9d48e60e397b120c828fda2e) on Tue, 17 May 2022 17:24:49 UTC.
+[v1.23.0...986caeb](https://github.com/cri-o/cri-o/compare/v1.23.0...986caeb7892174dbc311da4dfb1aebee444c67e3) on Tue, 17 May 2022 19:48:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz)
-- [cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum)
-- [cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz)
-- [cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.355269e34a2f9e5f9d48e60e397b120c828fda2e.tar.gz.sha256sum)
+- [cri-o.amd64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz)
+- [cri-o.amd64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz.sha256sum)
+- [cri-o.arm64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz)
+- [cri-o.arm64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.986caeb7892174dbc311da4dfb1aebee444c67e3.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -142,6 +142,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
 - github.com/cri-o/ocicni: [b388448 → v0.3.1](https://github.com/cri-o/ocicni/compare/b388448...v0.3.1)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
+- github.com/envoyproxy/go-control-plane: [cf90f65 → 49ff273](https://github.com/envoyproxy/go-control-plane/compare/cf90f65...49ff273)
 - github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
 - github.com/fsnotify/fsnotify: [v1.5.1 → v1.5.4](https://github.com/fsnotify/fsnotify/compare/v1.5.1...v1.5.4)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
@@ -165,7 +166,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/sys: 751e447 → 33da011
 - golang.org/x/term: 6886f2d → 03fcf44
 - golang.org/x/tools: d4cc65f → v0.1.10
-- google.golang.org/grpc: v1.42.0 → v1.43.0
+- google.golang.org/grpc: v1.42.0 → v1.46.2
 - mvdan.cc/sh/v3: v3.3.1 → v3.4.3
 
 ### Removed
