Update release notes

--- a/v1.22.4.md
+++ b/v1.22.4.md
@@ -12,14 +12,14 @@
 # CRI-O v1.22.4
 
 The release notes have been generated for the commit range
-[v1.22.3...e060681](https://github.com/cri-o/cri-o/compare/v1.22.3...e06068142f46a70b30a4b1af3846dc05801e4295) on Tue, 17 May 2022 13:06:40 EDT.
+[v1.22.3...b6d3a87](https://github.com/cri-o/cri-o/compare/v1.22.3...b6d3a87e89bcf95d44770b2a3a9464ada272635f) on Thu, 19 May 2022 16:17:02 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e06068142f46a70b30a4b1af3846dc05801e4295.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e06068142f46a70b30a4b1af3846dc05801e4295.tar.gz)
-- [cri-o.arm64.e06068142f46a70b30a4b1af3846dc05801e4295.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e06068142f46a70b30a4b1af3846dc05801e4295.tar.gz)
+- [cri-o.amd64.b6d3a87e89bcf95d44770b2a3a9464ada272635f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b6d3a87e89bcf95d44770b2a3a9464ada272635f.tar.gz)
+- [cri-o.arm64.b6d3a87e89bcf95d44770b2a3a9464ada272635f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b6d3a87e89bcf95d44770b2a3a9464ada272635f.tar.gz)
 
 ## Changelog since v1.22.3
 
@@ -29,6 +29,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a segfault when multiple container stops come in for the same container ([#5803](https://github.com/cri-o/cri-o/pull/5803), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5829](https://github.com/cri-o/cri-o/pull/5829), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
