Update release notes

--- a/v1.21.7.md
+++ b/v1.21.7.md
@@ -11,14 +11,14 @@
 # CRI-O v1.21.7
 
 The release notes have been generated for the commit range
-[v1.21.6...283ec41](https://github.com/cri-o/cri-o/compare/v1.21.6...283ec410c082bf91304bbf6f5d5bf1c6490a0e3d) on Tue, 17 May 2022 13:07:29 EDT.
+[v1.21.6...57607b4](https://github.com/cri-o/cri-o/compare/v1.21.6...57607b4507fe05c4a040c29243232265cd6e7a3c) on Mon, 23 May 2022 16:35:10 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.283ec410c082bf91304bbf6f5d5bf1c6490a0e3d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.283ec410c082bf91304bbf6f5d5bf1c6490a0e3d.tar.gz)
-- [cri-o.arm64.283ec410c082bf91304bbf6f5d5bf1c6490a0e3d.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.283ec410c082bf91304bbf6f5d5bf1c6490a0e3d.tar.gz)
+- [cri-o.amd64.57607b4507fe05c4a040c29243232265cd6e7a3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.57607b4507fe05c4a040c29243232265cd6e7a3c.tar.gz)
+- [cri-o.arm64.57607b4507fe05c4a040c29243232265cd6e7a3c.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.57607b4507fe05c4a040c29243232265cd6e7a3c.tar.gz)
 
 ## Changelog since v1.21.6
 
@@ -26,6 +26,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Allow CRI-O to parse > SIGRTMIN signals ([#5861](https://github.com/cri-o/cri-o/pull/5861), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5897](https://github.com/cri-o/cri-o/pull/5897), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a segfault when multiple container stops come in for the same container ([#5828](https://github.com/cri-o/cri-o/pull/5828), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed `io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel` annotation usage with the OpenShift MCS. ([#5873](https://github.com/cri-o/cri-o/pull/5873), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5478](https://github.com/cri-o/cri-o/pull/5478), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
