Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...4506aed](https://github.com/cri-o/cri-o/compare/v1.23.0...4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4) on Tue, 24 May 2022 20:20:33 UTC.
+[v1.23.0...ceda866](https://github.com/cri-o/cri-o/compare/v1.23.0...ceda866e63a6778c866d7cd8f98b14b1581fd029) on Wed, 25 May 2022 01:43:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz)
-- [cri-o.amd64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz.sha256sum)
-- [cri-o.arm64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz)
-- [cri-o.arm64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.4506aed85e8ee8ce1ee0f8dda3fdb1503a1bc8b4.tar.gz.sha256sum)
+- [cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz)
+- [cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum)
+- [cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz)
+- [cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -64,6 +64,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   https://github.com/container-orchestrated-devices/container-device-interface for more
   info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
  - Updated CNI plugins to v1.1.1. ([#5766](https://github.com/cri-o/cri-o/pull/5766), [@saschagrunert](https://github.com/saschagrunert))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#5904](https://github.com/cri-o/cri-o/pull/5904), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
  - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
