Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...ceda866](https://github.com/cri-o/cri-o/compare/v1.23.0...ceda866e63a6778c866d7cd8f98b14b1581fd029) on Wed, 25 May 2022 01:43:45 UTC.
+[v1.23.0...a41ea96](https://github.com/cri-o/cri-o/compare/v1.23.0...a41ea96433d09cd854db358d32b378b0cb2f011e) on Wed, 25 May 2022 09:32:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz)
-- [cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum)
-- [cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz)
-- [cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ceda866e63a6778c866d7cd8f98b14b1581fd029.tar.gz.sha256sum)
+- [cri-o.amd64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz)
+- [cri-o.amd64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz.sha256sum)
+- [cri-o.arm64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz)
+- [cri-o.arm64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a41ea96433d09cd854db358d32b378b0cb2f011e.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -73,6 +73,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5800](https://github.com/cri-o/cri-o/pull/5800), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5895](https://github.com/cri-o/cri-o/pull/5895), [@haircommander](https://github.com/haircommander))
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
