--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -16,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...0e22ab4](https://github.com/cri-o/cri-o/compare/v1.23.0...0e22ab4aa57ac29575388c125f48b4706252bd2d) on Wed, 25 May 2022 19:27:08 UTC.
+[v1.23.0...b0a461d](https://github.com/cri-o/cri-o/compare/v1.23.0...b0a461d2468f1d8e840c388e4eed24639ee4873c) on Thu, 26 May 2022 03:15:39 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz)
-- [cri-o.amd64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz.sha256sum)
-- [cri-o.arm64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz)
-- [cri-o.arm64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.0e22ab4aa57ac29575388c125f48b4706252bd2d.tar.gz.sha256sum)
+- [cri-o.amd64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz)
+- [cri-o.amd64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz.sha256sum)
+- [cri-o.arm64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz)
+- [cri-o.arm64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.b0a461d2468f1d8e840c388e4eed24639ee4873c.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -56,12 +56,15 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Add experimental support for conmonrs, a redesign of conmon in rust. It should not be used in production. ([#5839](https://github.com/cri-o/cri-o/pull/5839), [@haircommander](https://github.com/haircommander))
  - Add functionality to use taskset to spawn new commands cri-o runs. Now, if InfraCtrCPUSet is called, all newly spawned commands will be placed in the InfraCtrCPUSet (as it's expected to be set to the reserved CPU set that system commands should run on). ([#5514](https://github.com/cri-o/cri-o/pull/5514), [@haircommander](https://github.com/haircommander))
  - Add pause and unpause to the CRI-O HTTP API, allowing programs with access to the crio.sock to pause containers ([#5797](https://github.com/cri-o/cri-o/pull/5797), [@jwcesign](https://github.com/jwcesign))
+ - Added more verbose output to version information.
+  Added new `crio version -v,--verbose` flag to additionally list all compiled dependencies. ([#5750](https://github.com/cri-o/cri-o/pull/5750), [@saschagrunert](https://github.com/saschagrunert))
  - Automatically `chcon` and `restorecon` on get script for SELinux enabled distributions. ([#5711](https://github.com/cri-o/cri-o/pull/5711), [@saschagrunert](https://github.com/saschagrunert))
  - Implement CDI device injection: extract the names of requested CDI devices and update
   the OCI Spec according to the corresponding CDI device specifications. Please refer to
   https://github.com/container-orchestrated-devices/container-device-interface for more
   info about CDI. ([#5571](https://github.com/cri-o/cri-o/pull/5571), [@klihub](https://github.com/klihub))
  - Updated CNI plugins to v1.1.1. ([#5766](https://github.com/cri-o/cri-o/pull/5766), [@saschagrunert](https://github.com/saschagrunert))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#5904](https://github.com/cri-o/cri-o/pull/5904), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
  - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
@@ -70,6 +73,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix CVE-2022-27652 by dropping and refusing to add any inheritable capabilities ([#5769](https://github.com/cri-o/cri-o/pull/5769), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5800](https://github.com/cri-o/cri-o/pull/5800), [@haircommander](https://github.com/haircommander))
  - Fix a bug where a pod given a host IPC or network namespace could configure sysctls on the host ([#5610](https://github.com/cri-o/cri-o/pull/5610), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5895](https://github.com/cri-o/cri-o/pull/5895), [@haircommander](https://github.com/haircommander))
  - Fix a bug where invalid default_sysctls could be specified, leading to an error like "Failed to configure sysctls after unshare: No such file or directory" ([#5673](https://github.com/cri-o/cri-o/pull/5673), [@haircommander](https://github.com/haircommander))
  - Fix a bug where memory swap values were specified even if the memory swap cgroup is not enabled ([#5539](https://github.com/cri-o/cri-o/pull/5539), [@haircommander](https://github.com/haircommander))
  - Fix a bug where situations of excessive load on nodes causes containers to never actually start ([#5590](https://github.com/cri-o/cri-o/pull/5590), [@haircommander](https://github.com/haircommander))
@@ -140,6 +144,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/image/v5: [v5.16.1 → v5.17.0](https://github.com/containers/image/v5/compare/v5.16.1...v5.17.0)
 - github.com/cri-o/ocicni: [b388448 → v0.3.1](https://github.com/cri-o/ocicni/compare/b388448...v0.3.1)
 - github.com/docker/docker: [v20.10.9+incompatible → v20.10.11+incompatible](https://github.com/docker/docker/compare/v20.10.9...v20.10.11)
+- github.com/envoyproxy/go-control-plane: [cf90f65 → 49ff273](https://github.com/envoyproxy/go-control-plane/compare/cf90f65...49ff273)
 - github.com/frankban/quicktest: [v1.11.3 → v1.13.1](https://github.com/frankban/quicktest/compare/v1.11.3...v1.13.1)
 - github.com/fsnotify/fsnotify: [v1.5.1 → v1.5.4](https://github.com/fsnotify/fsnotify/compare/v1.5.1...v1.5.4)
 - github.com/go-logr/logr: [v1.2.0 → v1.2.1](https://github.com/go-logr/logr/compare/v1.2.0...v1.2.1)
@@ -163,7 +168,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - golang.org/x/sys: 751e447 → 33da011
 - golang.org/x/term: 6886f2d → 03fcf44
 - golang.org/x/tools: d4cc65f → v0.1.10
-- google.golang.org/grpc: v1.42.0 → v1.43.0
+- google.golang.org/grpc: v1.42.0 → v1.46.2
 - mvdan.cc/sh/v3: v3.3.1 → v3.4.3
 
 ### Removed
