Update release notes

--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -2,6 +2,7 @@
   - [Downloads](#downloads)
   - [Changelog since v1.23.0](#changelog-since-v1230)
     - [Changes by Kind](#changes-by-kind)
+      - [Dependency-Change](#dependency-change)
       - [Other](#other)
       - [Deprecation](#deprecation)
       - [API Change](#api-change)
@@ -16,20 +17,23 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...e86f723](https://github.com/cri-o/cri-o/compare/v1.23.0...e86f7239b9842649c0a379386180e7d061853371) on Thu, 02 Jun 2022 14:18:20 UTC.
+[v1.23.0...afab4b7](https://github.com/cri-o/cri-o/compare/v1.23.0...afab4b78d1d66fb5144ef003b20eba5e53833336) on Thu, 02 Jun 2022 16:47:28 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e86f7239b9842649c0a379386180e7d061853371.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e86f7239b9842649c0a379386180e7d061853371.tar.gz)
-- [cri-o.amd64.e86f7239b9842649c0a379386180e7d061853371.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e86f7239b9842649c0a379386180e7d061853371.tar.gz.sha256sum)
-- [cri-o.arm64.e86f7239b9842649c0a379386180e7d061853371.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e86f7239b9842649c0a379386180e7d061853371.tar.gz)
-- [cri-o.arm64.e86f7239b9842649c0a379386180e7d061853371.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e86f7239b9842649c0a379386180e7d061853371.tar.gz.sha256sum)
+- [cri-o.amd64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz)
+- [cri-o.amd64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz.sha256sum)
+- [cri-o.arm64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz)
+- [cri-o.arm64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.afab4b78d1d66fb5144ef003b20eba5e53833336.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
 ### Changes by Kind
+
+#### Dependency-Change
+ - Updated cri-tools to v1.24.2. ([#5906](https://github.com/cri-o/cri-o/pull/5906), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Other
  - Introduce the following metrics:
