Update with CVE text
Signed-off-by: Peter Hunt <pehunt@redhat.com>

--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -11,8 +11,10 @@
 
 # CRI-O v1.22.5
 
+**This release fixes CVE-2022-1708**
+
 The release notes have been generated for the commit range
-[v1.22.4...bd7ea64](https://github.com/cri-o/cri-o/compare/v1.22.4...bd7ea645cd7436edd6a5a07b11559906032f124f) on Mon, 06 Jun 2022 18:37:43 UTC.
+[v1.22.4...bd7ea64](https://github.com/cri-o/cri-o/compare/v1.22.4...bd7ea645cd7436edd6a5a07b11559906032f124f) on Mon, 06 Jun 2022 14:44:18 EDT.
 
 ## Downloads
 
