Update release notes

--- a/v1.24.1.md
+++ b/v1.24.1.md
@@ -10,10 +10,8 @@
 
 # CRI-O v1.24.1
 
-**This release fixes CVE-2022-1708**
-
 The release notes have been generated for the commit range
-[v1.24.0...v1.24.1](https://github.com/cri-o/cri-o/compare/v1.24.0...v1.24.1) on Mon, 06 Jun 2022 14:35:29 EDT.
+[v1.24.0...v1.24.1](https://github.com/cri-o/cri-o/compare/v1.24.0...v1.24.1) on Mon, 06 Jun 2022 18:49:21 UTC.
 
 ## Downloads
 
