Update release notes

--- a/v1.24.1.md
+++ b/v1.24.1.md
@@ -2,6 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.24.0](#changelog-since-v1240)
     - [Changes by Kind](#changes-by-kind)
+      - [Dependency-Change](#dependency-change)
+      - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
   - [Dependencies](#dependencies)
     - [Added](#added)
@@ -11,24 +13,32 @@
 # CRI-O v1.24.1
 
 The release notes have been generated for the commit range
-[v1.24.0...v1.24.1](https://github.com/cri-o/cri-o/compare/v1.24.0...v1.24.1) on Mon, 06 Jun 2022 18:49:21 UTC.
+[v1.24.0...a3bbde8](https://github.com/cri-o/cri-o/compare/v1.24.0...a3bbde8a77c323aa6a485da9a9046299155c6016) on Mon, 06 Jun 2022 18:52:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.v1.24.1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.1.tar.gz)
-- [cri-o.amd64.v1.24.1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.v1.24.1.tar.gz.sha256sum)
-- [cri-o.arm64.v1.24.1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.1.tar.gz)
-- [cri-o.arm64.v1.24.1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.v1.24.1.tar.gz.sha256sum)
+- [cri-o.amd64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz)
+- [cri-o.amd64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz.sha256sum)
+- [cri-o.arm64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz)
+- [cri-o.arm64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.a3bbde8a77c323aa6a485da9a9046299155c6016.tar.gz.sha256sum)
 
 ## Changelog since v1.24.0
 
 ### Changes by Kind
 
+#### Dependency-Change
+ - Updated cri-tools to v1.24.2. ([#5906](https://github.com/cri-o/cri-o/pull/5906), [@saschagrunert](https://github.com/saschagrunert))
+
+#### Feature
+ - Added more verbose output to version information.
+  Added new `crio version -v,--verbose` flag to additionally list all compiled dependencies. ([#5750](https://github.com/cri-o/cri-o/pull/5750), [@saschagrunert](https://github.com/saschagrunert))
+ - Use default umask `0o022` if CRI-O runs under a different umask value. ([#5904](https://github.com/cri-o/cri-o/pull/5904), [@saschagrunert](https://github.com/saschagrunert))
+
 #### Bug or Regression
  - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
- - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5935](https://github.com/cri-o/cri-o/pull/5935), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5895](https://github.com/cri-o/cri-o/pull/5895), [@haircommander](https://github.com/haircommander))
 
 ## Dependencies
 
