--- a/v1.24.1.md
+++ b/v1.24.1.md
@@ -12,16 +12,16 @@
 # CRI-O v1.24.1
 
 The release notes have been generated for the commit range
-[v1.24.0...08fe06b](https://github.com/cri-o/cri-o/compare/v1.24.0...08fe06b4fc3ca609866470b3b9509fe7e52cafb1) on Thu, 09 Jun 2022 21:16:06 UTC.
+[v1.24.0...8c7e228](https://github.com/cri-o/cri-o/compare/v1.24.0...8c7e228aa232531db5193040bc60a47b2377d46b) on Tue, 14 Jun 2022 00:06:18 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz)
-- [cri-o.amd64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz.sha256sum)
-- [cri-o.arm64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz)
-- [cri-o.arm64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.08fe06b4fc3ca609866470b3b9509fe7e52cafb1.tar.gz.sha256sum)
+- [cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz)
+- [cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum)
+- [cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz)
+- [cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum)
 
 ## Changelog since v1.24.0
 
@@ -30,6 +30,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Bug or Regression
  - Add `monitor_exec_cgroup` to the configuration's runtime handler struct. This allows an admin to specify which cgroup the monitor for exec sync requests runs in (defaults to that of CRI-O). ([#5837](https://github.com/cri-o/cri-o/pull/5837), [@donpenney](https://github.com/donpenney))
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5935](https://github.com/cri-o/cri-o/pull/5935), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5943](https://github.com/cri-o/cri-o/pull/5943), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
