--- a/v1.24.1.md
+++ b/v1.24.1.md
@@ -12,16 +12,16 @@
 # CRI-O v1.24.1
 
 The release notes have been generated for the commit range
-[v1.24.0...8c7e228](https://github.com/cri-o/cri-o/compare/v1.24.0...8c7e228aa232531db5193040bc60a47b2377d46b) on Tue, 14 Jun 2022 00:06:18 UTC.
+[v1.24.0...ff26732](https://github.com/cri-o/cri-o/compare/v1.24.0...ff26732884be5a0037a4fab3401d9496573858f1) on Tue, 14 Jun 2022 10:10:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz)
-- [cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum)
-- [cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz)
-- [cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8c7e228aa232531db5193040bc60a47b2377d46b.tar.gz.sha256sum)
+- [cri-o.amd64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz)
+- [cri-o.amd64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz.sha256sum)
+- [cri-o.arm64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz)
+- [cri-o.arm64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ff26732884be5a0037a4fab3401d9496573858f1.tar.gz.sha256sum)
 
 ## Changelog since v1.24.0
 
@@ -33,6 +33,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5943](https://github.com/cri-o/cri-o/pull/5943), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
+ - Fix a panic caused by using the improper Result structure version when setting up CNI plugins ([#5960](https://github.com/cri-o/cri-o/pull/5960), [@haircommander](https://github.com/haircommander))
  - Fix a rare deadlock while communicating to systemd (RHBZ 2082344) ([#5954](https://github.com/cri-o/cri-o/pull/5954), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
@@ -41,6 +42,8 @@ Download one of our static release bundles via our Google Cloud Bucket:
 _Nothing has changed._
 
 ### Changed
+- github.com/containernetworking/cni: [v1.1.0 → v1.1.1](https://github.com/containernetworking/cni/compare/v1.1.0...v1.1.1)
+- github.com/cri-o/ocicni: [v0.3.1 → v0.4.0](https://github.com/cri-o/ocicni/compare/v0.3.1...v0.4.0)
 - golang.org/x/crypto: 089bfa5 → 2c7772b
 
 ### Removed
