--- a/v1.22.5.md
+++ b/v1.22.5.md
@@ -11,17 +11,15 @@
 
 # CRI-O v1.22.5
 
-**This release fixes CVE-2022-1708**
-
 The release notes have been generated for the commit range
-[v1.22.4...bd7ea64](https://github.com/cri-o/cri-o/compare/v1.22.4...bd7ea645cd7436edd6a5a07b11559906032f124f) on Mon, 06 Jun 2022 14:44:18 EDT.
+[v1.22.4...c972b0a](https://github.com/cri-o/cri-o/compare/v1.22.4...c972b0afb2cd58d980d48973a2a91b39859c937e) on Wed, 22 Jun 2022 07:26:35 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.bd7ea645cd7436edd6a5a07b11559906032f124f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.bd7ea645cd7436edd6a5a07b11559906032f124f.tar.gz)
-- [cri-o.arm64.bd7ea645cd7436edd6a5a07b11559906032f124f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.bd7ea645cd7436edd6a5a07b11559906032f124f.tar.gz)
+- [cri-o.amd64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz)
+- [cri-o.arm64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.c972b0afb2cd58d980d48973a2a91b39859c937e.tar.gz)
 
 ## Changelog since v1.22.4
 
@@ -29,6 +27,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Bug or Regression
  - Fix a bug where ExecSync requests (exec probes) could use an arbitrary amount of memory and disk. Output from ExecSync requests is now limited to 16MB (the amount that exec output was limited to in the dockershim). Disk limiting requires conmon 2.1.2 to work. See https://github.com/cri-o/cri-o/security/advisories/GHSA-fcm2-6c3h-pg6j and CVE-2022-1708 for more information. ([#5936](https://github.com/cri-o/cri-o/pull/5936), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where child processes of containers in the host's PID namespace appear to leak after the child exits ([#5986](https://github.com/cri-o/cri-o/pull/5986), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
  - Fix a bug where CRI-O would leak a log file if a container failed to be created and the pod hadn't yet been cleaned up. ([#5825](https://github.com/cri-o/cri-o/pull/5825), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
